gcc/testsuite/g++.dg/cpp1y/lambda-init9.C
// { dg-do compile { target c++14 } }

void f()
{
  [&x=1]{};   // { dg-error "cannot capture|cannot bind non-const lvalue ref" }
}
